# project-contributors-assignment

./: .env.dev  .env.prod  Dockerfile  Project Contributors API.postman_collection.json  README.md  docker-compose.dev.yml  docker-compose.yml
project-contributors-api/: manage.py  pyproject.toml
project-contributors-api/common/models/: base.py
project-contributors-api/contributor/: models.py  serializers.py  test_contributor.py  urls.py  views.py
project-contributors-api/contributor/migrations/: 0001_initial.py  0002_alter_contributor_first_name_and_more.py  0003_alter_contributorskillset_contributor.py
project-contributors-api/project/: models.py
project-contributors-api/project/migrations/: 0001_initial.py
project-contributors-api/project_contributors_api/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: apply_migrations.sh  black_format.sh  make_migrations.sh  pytest.sh
scripts/entrypoints/: dev-entrypoint.sh  prod-entrypoint.sh
